Split distribution from server
More modularity.
One could build their own distribution, with their own filters for example.